# glyphy

./: .gitignore  AUTHORS  CONTRIBUTORS  COPYING  Makefile  Makefile.am  NEWS  README  README.md  a.cc  ac_define_dir.m4  acinclude.m4  appveyor.yml  arc.c  arc.cc  autogen.sh  autogen_no_autoheader.sh  bezier-arc-approximation.hh  cairo-helper.hh  configure.ac  fragment_shader.glsl  freetype-helper.hh  geometry.hh  git.mk  gltext.c  glyphy.cc  glyphy.h  glyphy.pc.in  glyphy_demo.cc  glyphy_freetype.cc  glyphy_lib.cc  grid.cc  meson.build  meson_options.txt  sample-curves.hh
.github/workflows/: linux-build.yml
bench/: bench-encode.cc  meson.build
demo/: DroidSans.c  Makefile.am  default-text.h  demo-atlas.cc  demo-atlas.glsl  demo-atlas.h  demo-buffer.cc  demo-buffer.h  demo-common.h  demo-font.cc  demo-font.h  demo-fshader.glsl  demo-glstate.cc  demo-glstate.h  demo-shader.cc  demo-shader.h  demo-state.cc  demo-state.h  demo-text.txt  demo-vertex.glsl  demo-view.cc  demo-view.h  demo-vshader.glsl  glyphy-demo-animation.cc  glyphy-demo-atlas.glsl  glyphy-demo-atlas.h  glyphy-demo-font.h  glyphy-demo-fshader.glsl  glyphy-demo-gl.h  glyphy-demo-glut.h  glyphy-demo-shaders.h  glyphy-demo-vshader.glsl  glyphy-demo.cc  glyphy-demo.h  glyphy-validate.cc  glyphy_demo.cc  jabberwocky.h  matrix4x4.c  matrix4x4.h  meson.build  (+2 more)
demo-gl2/: Makefile.am  demo-atlas.glsl  demo-buffer.cc  demo-common.h  demo-glstate.h  demo-vshader.glsl  glyphy-demo.cc  matrix4x4.c
demo-gl2/android/: Makefile.am  README
demo-gl2/android/res/values/: strings.xml
demo-gl3/: demo-atlas.glsl  demo-buffer.cc  demo-common.h  demo-font.cc  demo-font.h  demo-fshader.glsl  demo-shader.cc  demo-view.cc  demo-view.h  glyphy-demo.cc
demo-gl3/android/: AndroidManifest.xml
demo-gl3/android/jni/: Application.mk
demo-simple/: build-run.sh  demo-simple.cc
demo/android/: Makefile.am  build.xml
demo/android/jni/: Android.mk
demo/windows/: clean-up.bat  config.h  sed_enquote_lines.txt  stringize.bat
demo/windows/freeglut/src/mswin/: config.h
demo/windows/msvc2012/: demo.vcxproj  freeglut.vcxproj  freeglut.vcxproj.filters  glew.vcxproj  glyphy.sln  glyphy.vcxproj
demo/windows/msvc2013/: demo.vcxproj  freeglut.vcxproj  glew.vcxproj  glyphy.vcxproj  glyphy.vcxproj.filters
demo/windows/msvc2015/: demo.vcxproj  demo.vcxproj.filters  freeglut.vcxproj  glew.vcxproj  glyphy.vcxproj
include/: Makefile.am  glyphy-freetype.h  glyphy.h  glyphy.hh
include/glyphy/: config.hh.in  fragment_shader.glsl  freetype-helper.hh  geometry.hh
src/: Makefile.am  bezier-arc-approximation.hh  cairo-helper.hh  glyphy-arc-bezier.hh  glyphy-arc.cc  glyphy-arcs-bezier.hh  glyphy-arcs.cc  glyphy-blob.cc  glyphy-common.glsl  glyphy-common.hh  glyphy-cu2qu.cc  glyphy-curves.cc  glyphy-encode.cc  glyphy-extents.cc  glyphy-fragment.glsl  glyphy-freetype.h  glyphy-geometry.hh  glyphy-harfbuzz.h  glyphy-outline.cc  glyphy-rgba.cc  glyphy-rgba.hh  glyphy-sdf-glsl.h  glyphy-sdf.cc  glyphy-sdf.glsl  glyphy-shaders.c  glyphy-shaders.cc  glyphy-slug.glsl  glyphy-vertex.glsl  glyphy-windows.h  glyphy.cc  glyphy.h  glyphy.hh  glyphy_freetype.cc  glyphy_lib.cc  meson.build  sample-curves.hh  stringize
src_c/: Makefile.am  bezier-arc-approximation.hh  geometry.hh  glyphy-arc-bezier.hh  glyphy-arc.cc  glyphy-arc.h  glyphy-arcs-bezier.hh  glyphy-arcs.cc  glyphy-common.glsl  glyphy-demo-freetype.h  glyphy-demo-glut.h  glyphy-demo-shaders.h  glyphy-demo.cc  glyphy-freetype.h  glyphy-geometry.hh  glyphy-rgba.cc  glyphy-sdf.glsl  glyphy.cc  glyphy.h  test-geometry.cc
win32/: config.h  glyphy-demo.vcxproj  glyphy.sln  glyphy.vcxproj  stringize.js
windows/: config.h  glyphy-demo.vcxproj  glyphy.sln  glyphy.vcxproj
